fixed text align

--- a/styles/home.css
+++ b/styles/home.css
@@ -103,6 +103,7 @@
 .player-info .player-info-individual .total-score {
   margin: 0.5rem 0;
   font-size: 1.2rem;
+  text-align: center;
 }
 
 .player-info .player-info-individual .stats-info {
